force-app/main/default/objects/EmailDelivery__c/EmailDelivery__c.object-meta.xml
<CustomObject>
    <label>Email Delivery</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Deliveries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>