force-app/main/default/objects/EmailDelivery__c/fields/BccAddress__c.field-meta.xml
<CustomField>
    <fullName>BccAddress__c</fullName>
    <description>A json array of email address objects with an email key for recipients who should receive a blind carbon copy of the email message e.g. [{&quot;email&quot;: &quot;bcc1@example.com&quot;}, {&quot;email&quot;: &quot;bcc2@example.com&quot;}]</description>
    <label>Bcc Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>