force-app/main/default/objects/EmailDelivery__c/fields/CcAddress__c.field-meta.xml
<CustomField>
    <fullName>CcAddress__c</fullName>
    <description>A json array of email address objects with an email key for recipients who should receive a carbon copy of the email message e.g. [{&quot;email&quot;: &quot;cc1@example.com&quot;}, {&quot;email&quot;: &quot;cc2@example.com&quot;}]</description>
    <label>Cc Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>