force-app/main/default/objects/EmailDelivery__c/fields/FailedDate__c.field-meta.xml
<CustomField>
    <fullName>FailedDate__c</fullName>
    <label>Failed Date</label>
    <type>DateTime</type>
</CustomField>