force-app/main/default/objects/EmailDelivery__c/fields/FromAddress__c.field-meta.xml
<CustomField>
    <fullName>FromAddress__c</fullName>
    <label>From Address</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>