force-app/main/default/objects/EmailDelivery__c/fields/FromName__c.field-meta.xml
<CustomField>
    <fullName>FromName__c</fullName>
    <label>From Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>