force-app/main/default/objects/EmailDelivery__c/fields/HasUnsubscribed__c.field-meta.xml
<CustomField>
    <fullName>HasUnsubscribed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Unsubscribed</label>
    <type>Checkbox</type>
</CustomField>