force-app/main/default/objects/EmailDelivery__c/fields/Last_Retrieved_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Retrieved_Date__c</fullName>
    <label>Last Retrieved Date</label>
    <type>DateTime</type>
</CustomField>