force-app/main/default/objects/EmailDelivery__c/fields/ProcessedDate__c.field-meta.xml
<CustomField>
    <fullName>ProcessedDate__c</fullName>
    <label>Processed Date</label>
    <type>DateTime</type>
</CustomField>