force-app/main/default/objects/EmailDelivery__c/fields/Snippet__c.field-meta.xml
<CustomField>
    <fullName>Snippet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quicktext</label>
    <referenceTo>Snippet__c</referenceTo>
    <relationshipLabel>Email Deliveries</relationshipLabel>
    <relationshipName>EmailDeliveries</relationshipName>
    <type>Lookup</type>
</CustomField>