force-app/main/default/objects/EmailDelivery__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>scheduled</fullName>
                <default>true</default>
                <label>scheduled</label>
            </value>
            <value>
                <fullName>refused</fullName>
            </value>
            <value>
                <fullName>invalid</fullName>
            </value>
            <value>
                <fullName>queued</fullName>
            </value>
            <value>
                <fullName>processed</fullName>
            </value>
            <value>
                <fullName>failed</fullName>
            </value>
            <value>
                <fullName>paused</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>