force-app/main/default/objects/EmailDelivery__c/fields/Subject_HTML__c.field-meta.xml
<CustomField>
    <fullName>Subject_HTML__c</fullName>
    <label>Subject HTML</label>
    <length>255</length>
    <type>Text</type>
</CustomField>