force-app/main/default/objects/EmailDelivery__c/fields/UnsubscribeToken__c.field-meta.xml
<CustomField>
    <fullName>UnsubscribeToken__c</fullName>
    <label>Unsubscribe Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>