force-app/main/default/objects/EmailDelivery__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>ProcessedDate__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Email Deliveries</label>
</ListView>