force-app/main/default/objects/EmailDelivery__c/listViews/All_Email_Deliveries.listView-meta.xml
<ListView>
    <fullName>All_Email_Deliveries</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>ProcessedDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Email Deliveries</label>
</ListView>